--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
     <script src="/scripts/app.js"></script>
     <script src="/scripts/Room.js"></script>
     <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/messages.js"></script>
     <script src="/scripts/controllers/ModalCtrl.js"></script>
 </body>
 </html>
