--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,9 @@
     <!-- Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 
+    <!-- Angular Cookies Module -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
+
     <!-- AngularUI Router -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
 
@@ -39,8 +42,10 @@
     <!-- Application Files -->
     <script src="/scripts/app.js"></script>
     <script src="/scripts/Room.js"></script>
+    <script src="/scripts/cookies.js"></script>
     <script src="/scripts/controllers/HomeCtrl.js"></script>
     <script src="/scripts/messages.js"></script>
     <script src="/scripts/controllers/ModalCtrl.js"></script>
+    <script src="/scripts/controllers/usernameModalCtrl.js"></script>
 </body>
 </html>
